apps/transmission/trans-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-svc
  namespace: transmission
  labels:
    app-name: transmission
    version: "${TRANSMISSION_VERSION}"
    component: torrent-download-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  type: ClusterIP
  ports:
    - port: 9091
      targetPort: 9091
      protocol: TCP
  selector:
    app-name: transmission
