apps/transmission/trans-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transmission-vs
  namespace: transmission
  labels:
    app-name: transmission
    version: "${TRANSMISSION_VERSION}"
    component: torrent-download-server
    hostNetwork: "yes"
    internal-service: "yes"
    managed-by: chynten
    created-by: chynten
spec:
  hosts:
    - '$TRANSMISSION_DOMAIN'
  gateways:
    - transmission-gateway
  http:
    - route:
        - destination:
            host: transmission-svc.transmission.svc.cluster.local
            port:
              number: 9091
